src/test/ui/reachable/expr_array.stderr
error: unreachable expression
  --> $DIR/expr_array.rs:9:34
   |
LL |     let x: [usize; 2] = [return, 22];
   |                                  ^^
   |
note: lint level defined here
  --> $DIR/expr_array.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
note: any code following this expression is unreachable
  --> $DIR/expr_array.rs:9:26
   |
LL |     let x: [usize; 2] = [return, 22];
   |                          ^^^^^^

error: unreachable expression
  --> $DIR/expr_array.rs:14:25
   |
LL |     let x: [usize; 2] = [22, return];
   |                         ^^^^^^^^^^^^
   |
note: any code following this expression is unreachable
  --> $DIR/expr_array.rs:14:30
   |
LL |     let x: [usize; 2] = [22, return];
   |                              ^^^^^^

error: aborting due to 2 previous errors

